# interdim

./: .buildinfo  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/_autosummary/: interdim.cluster.doctree  interdim.pipeline.doctree  interdim.reduce.doctree  interdim.score.doctree  interdim.vis.doctree  interdim.viz.doctree
.github/workflows/: docs.yml
_autosummary/: interdim.cluster.html  interdim.pipeline.html  interdim.reduce.html  interdim.score.html  interdim.vis.html  interdim.viz.html
_modules/: index.html
_modules/interdim/: cluster.html  pipeline.html  reduce.html  score.html  vis.html  viz.html
_sources/: index.rst.txt
_sources/_autosummary/: interdim.pipeline.rst.txt  interdim.vis.rst.txt  interdim.viz.rst.txt
docs/source/: conf.py  index.rst  modules.rst
docs/source/_autosummary/: interdim.cluster.rst  interdim.pipeline.rst  interdim.reduce.rst  interdim.score.rst  interdim.viz.rst
notebooks/: DNN_latents.ipynb  IRIS_visualization.ipynb  LLM_token_embeddings.ipynb  iris_species.ipynb  test_notebook.ipynb  testing.ipynb
src/interdim/: __init__.py  cluster.py  pipeline.py  reduce.py  score.py  vis.py  viz.py
tests/: conftest.py  test_cluster.py  test_pipeline.py  test_reduce.py  test_score.py  test_vis.py  test_viz.py
