[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interdim"
version = "0.1.0"
description = "Interactive Dimensionality Reduction, Clustering, and Visualization"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Matthew Shinkle", email = "matthewshinkle@gmail.com"}
]
dependencies = [
    "numpy",
    "scikit-learn",
    "plotly",
    "dash",
]

[project.optional-dependencies]
umap = ["umap-learn"]
hdbscan = ["hdbscan"]
all = ["umap-learn", "hdbscan"]

[project.urls]
"Homepage" = "https://github.com/MShinkle/interdim"

[tool.setuptools.packages.find]
where = ["src"]
include = ["interdim*"]